--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -14,5 +14,9 @@ COPY files/php.ini /usr/local/etc/php/conf.d/app.ini
 COPY files/nginx.conf /etc/nginx/sites-enabled/default
 COPY files/run.sh /bin/laravel.sh
 
+RUN mkdir /var/log/laravel
+
+RUN chmod +x /bin/laravel.sh
+
 EXPOSE 80
 ENTRYPOINT [ "/bin/laravel.sh" ]
