--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -2,6 +2,8 @@ FROM %FROM%
 
 WORKDIR /var/www
 
+RUN apt-get update && apt-get install -y supervisor
+
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/install-php-extensions && \
