--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -2,7 +2,7 @@ FROM %FROM%
 
 WORKDIR /var/www
 
-RUN apt-get update && apt-get install -y supervisor nginx
+RUN apt-get update && apt-get install -y supervisor git nginx
 
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
