--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -12,13 +12,13 @@ RUN chmod +x /usr/local/bin/install-php-extensions && \
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 COPY files/supervisor.conf /etc/supervisord.conf
-COPY files/php.ini /usr/local/etc/php/conf.d/app.ini
-COPY files/nginx.conf /etc/nginx/sites-enabled/default
 COPY files/run.sh /bin/laravel.sh
 
 RUN mkdir /var/log/laravel
 
 RUN chmod +x /bin/laravel.sh
+# Copy files
+COPY files/root/ /
 
 EXPOSE 80
 ENTRYPOINT [ "/bin/laravel.sh" ]
