Set S6_KEEP_ENV to true

--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get update && apt-get install -y git nginx xz-utils
 ARG OVERLAY_VERSION="v3.1.1.2"
 ARG OVERLAY_ARCH="x86_64"
 
+ENV S6_KEEP_ENV=1
+
 ADD https://github.com/just-containers/s6-overlay/releases/download/${OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
 RUN tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz
 ADD https://github.com/just-containers/s6-overlay/releases/download/${OVERLAY_VERSION}/s6-overlay-${OVERLAY_ARCH}.tar.xz /tmp
