--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -13,6 +13,7 @@ ARG OVERLAY_VERSION="v3.1.1.2"
 ARG OVERLAY_ARCH="x86_64"
 
 ENV S6_KEEP_ENV=1
+ENV S6_CMD_WAIT_FOR_SERVICES_MAXTIME=30000
 
 ADD https://github.com/just-containers/s6-overlay/releases/download/${OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
 RUN tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz
