--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,10 +7,6 @@ on:
   push:
     branches: [ main ]
 
-env:
-  REGISTRY: docker.io
-  IMAGE_NAME: laravel
-
 jobs:
   matrix:
     runs-on: ubuntu-latest
@@ -49,6 +45,25 @@ jobs:
       - name: 'Checkout repository'
         uses: actions/checkout@v2
 
+      ## Setup environment variables
+      - name: Set branch name as Docker image tag
+        shell: bash
+        run: echo "TAG_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
+
+      - name: Replace master or main branch with latest tag
+        if: env.TAG_NAME == 'main' || env.TAG_NAME == 'master'
+        shell: bash
+        run: echo "TAG_NAME=latest" >> $GITHUB_ENV
+
+      - name: Set tag to release name if release event
+        if: github.event_name == 'release'
+        shell: bash
+        run: echo "TAG_NAME=$(echo $GITHUB_REF | cut -d / -f 3)" >> $GITHUB_ENV
+
+      - name: Store repo name and owner in lower case
+        shell: bash
+        run: echo "LOWER_CASE_REPO_NAME=$(echo ${GITHUB_REPOSITORY} | tr /A-Z/ /a-z/)" >> $GITHUB_ENV
+
       - name: 'Setup PHP'
         uses: shivammathur/setup-php@v2
         with:
@@ -64,15 +79,18 @@ jobs:
           name: Dockerfile.${{ matrix.configuration }}
           path: Dockerfile
 
+      - name: 'Set up Docker QEMU'
+        uses: docker/setup-qemu-action@v2
+
       - name: 'Setup Docker buildx'
         uses: docker/setup-buildx-action@v2
 
-      - name: 'Login to Docker registry'
+      - name: Login to Docker registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 'Extract Docker metadata'
         id: meta
@@ -82,10 +100,13 @@ jobs:
           tags: |
             type=raw,value=${{ matrix.configuration }}
 
-      - name: 'Build and push Docker image'
-        uses: docker/build-push-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v4.0.0
         with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/arm64
+          # Only releases or pushes to development or main branch
+          push: ${{ github.event_name == 'release' || env.TAG_NAME == 'development' || env.TAG_NAME == 'latest' }}
+          tags: ghcr.io/${{ env.LOWER_CASE_REPO_NAME }}:${{ env.TAG_NAME }}
+          # Use GitHub Actions cache
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
