--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -87,9 +87,11 @@ jobs:
         uses: docker/build-push-action@v4.0.0
         with:
           platforms: linux/arm64
+          context: .
           # Only releases or pushes to development or main branch
-          push: ${{ github.event_name == 'release' || env.TAG_NAME == 'development' || env.TAG_NAME == 'latest' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           # Use GitHub Actions cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
