--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4.0.0
         with:
-          platforms: linux/arm64
+          platforms: linux/arm64,linux/amd64
           context: .
           # Only releases or pushes to development or main branch
           push: ${{ github.event_name != 'pull_request' }}
