--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -1,36 +1,21 @@
-FROM %FROM%
+FROM mcr.microsoft.com/devcontainers/php:0-%FROM%
 
-WORKDIR /var/www
+# Install MariaDB client
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get install -y mariadb-client \
+    && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
-# NodeJS
-RUN curl -o- https://deb.nodesource.com/setup_16.x | bash
+# Install php-mysql driver
+RUN docker-php-ext-install %EXTENSIONS%
 
-# Dependencies
-RUN apt-get update && apt-get install -y git nginx xz-utils nodejs
+# [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
+ARG NODE_VERSION="lts/*"
+RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
-# S6 Overlay
-ARG OVERLAY_VERSION="v3.1.1.2"
-ARG OVERLAY_ARCH="aarch64"
+# [Optional] Uncomment this section to install additional OS packages.
+# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+#     && apt-get -y install --no-install-recommends <your-package-list-here>
 
-ENV S6_KEEP_ENV=1
-ENV S6_CMD_WAIT_FOR_SERVICES_MAXTIME=30000
+# [Optional] Uncomment this line to install global node packages.
+# RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
 
-ADD https://github.com/just-containers/s6-overlay/releases/download/${OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
-RUN tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz
-ADD https://github.com/just-containers/s6-overlay/releases/download/${OVERLAY_VERSION}/s6-overlay-${OVERLAY_ARCH}.tar.xz /tmp
-RUN tar -C / -Jxpf /tmp/s6-overlay-${OVERLAY_ARCH}.tar.xz
-
-# PHP Extensions
-ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
-
-RUN chmod +x /usr/local/bin/install-php-extensions && \
-    install-php-extensions %EXTENSIONS%
-
-# Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-# Copy files
-COPY files/root/ /
-
-EXPOSE 80
-ENTRYPOINT [ "/init" ]
