--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,6 +47,11 @@ jobs:
       - name: 'Checkout repository'
         uses: actions/checkout@v3
 
+      - name: Store repo name and owner in lower case
+        shell: bash
+        run: echo "LOWER_CASE_REPO_NAME=$(echo ${GITHUB_REPOSITORY} | tr /A-Z/ /a-z/)" >> $GITHUB_ENV
+
+
       - name: 'Setup PHP'
         uses: shivammathur/setup-php@v2
         with:
@@ -79,7 +84,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+          images: ghcr.io/${{ env.LOWER_CASE_REPO_NAME }}
           tags: |
             type=raw,value=${{ matrix.configuration }}
 
