--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -12,5 +12,7 @@ RUN docker-php-ext-install %EXTENSIONS%
 ARG NODE_VERSION="lts/*"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
-# Install Code Server
+USER vscode
+
+# Preinstall Code Server to speed up first run
 RUN curl -fsSL https://code-server.dev/install.sh | sh
