Install code server for vscode user without setting user

--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -12,7 +12,5 @@ RUN docker-php-ext-install %EXTENSIONS%
 ARG NODE_VERSION="lts/*"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
-USER vscode
-
-# Preinstall Code Server to speed up first run
-RUN curl -fsSL https://code-server.dev/install.sh | sh
+# Preinstall Code Server for user 'vscode' to speed up first run
+RUN su vscode -c "umask 0002 && curl -fsSL https://code-server.dev/install.sh | sh"
