--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -83,14 +83,12 @@ jobs:
           images: ${{ env.LOWER_CASE_REPO_NAME }}
           tags: |
             type=raw,value=${{ matrix.configuration }}
-      - run: |
-          pwd
-          ls -a
 
       - name: Build and push
         uses: docker/build-push-action@v4.0.0
         with:
           platforms: linux/arm64,linux/amd64
+          context: .
           # Only releases or pushes to development or main branch
           push: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/${{ steps.meta.outputs.tags }}
