Fixed workflow triggers

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
     paths:
       - 'laravel/**'
-      - '.github/workflows/'
+      - '.github/workflows/**'
 
 jobs:
   matrix:
