--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -53,11 +53,11 @@ jobs:
         working-directory: ${{ env.WORKDIR }}/scripts
         run: ./generate.sh ${{ matrix.configuration }}
 
-      - name: 'Upload Dockerfile'
+      - name: 'Upload Dockerfile arguments'
         uses: actions/upload-artifact@v3
         with:
-          name: Dockerfile.${{ matrix.configuration }}
-          path: ${{ env.WORKDIR }}/Dockerfile
+          name: env.${{ matrix.configuration }}
+          path: ${{ env.WORKDIR }}
           if-no-files-found: error
 
       - name: 'Set up Docker QEMU'
@@ -90,6 +90,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          # Use env.${{ matrix.configuration }} as list
+          build-args: $( join(fromFile('env.'${{matrix.configuration}}), ' ') )
           # Use GitHub Actions cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
