--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -80,6 +80,10 @@ jobs:
           images: ${{ env.LOWER_CASE_REPO_NAME }}
           tags: |
             type=raw,value=${{ matrix.configuration }}
+      
+      - name: Read build-args file
+        id: build-args
+        run: echo "BUILD_ARGS=$(cat env.${{matrix.configuration}})" >> $GITHUB_ENV
 
       - name: Build and push
         uses: docker/build-push-action@v4.0.0
@@ -92,7 +96,7 @@ jobs:
           tags: ghcr.io/${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           # Use env.${{ matrix.configuration }} as list
-          build-args: $( join(fromFile('env.${{matrix.configuration}}'), ' ') )
+          build-args: ${{env.BUILD_ARGS}}
           # Use GitHub Actions cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
