--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -83,10 +83,7 @@ jobs:
       
       - name: Read build-args file
         id: build-args
-        run: |
-          echo "BUILD_ARGS=$(cat ${{env.WORKDIR}}/configurations/${{matrix.configuration}}.json)" >> $GITHUB_ENV
-          echo "Build args: \n"
-          cat ${{env.WORKDIR}}/configurations/${{matrix.configuration}}.json
+        run: echo "BUILD_ARGS=$(cat ${{env.WORKDIR}}/configurations/${{matrix.configuration}}.json)" >> $GITHUB_ENV
 
       - name: Build and push
         uses: docker/build-push-action@v4.0.0
