--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -99,7 +99,7 @@ jobs:
           tags: ghcr.io/${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           # Use env.${{ matrix.configuration }} as list
-          build-args: |
+          build-args: >
             ${{ env.BUILD_ARGS }}
           # Use GitHub Actions cache
           cache-from: type=gha
