--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -83,10 +83,7 @@ jobs:
       
       - name: Read build-args file
         id: build-args
-        run: |
-          echo "BUILD_ARGS=$(cat ${{env.WORKDIR}}/env.${{matrix.configuration}})" >> $GITHUB_ENV
-          echo "Build args"
-          echo ${{env.BUILD_ARGS}}
+        run: echo "BUILD_ARGS=$(cat ${{env.WORKDIR}}/env.${{matrix.configuration}})" >> $GITHUB_ENV
 
       - name: Build and push
         uses: docker/build-push-action@v4.0.0
