--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -96,7 +96,7 @@ jobs:
           tags: ghcr.io/${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           # Use env.${{ matrix.configuration }} as list
-          build-args: ${{ fromJson(env.BUILD_ARGS) }}
+          build-args: ${{ env.BUILD_ARGS }}
           # Use GitHub Actions cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
