Trying different hardcoded v

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -100,7 +100,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           # Use env.${{ matrix.configuration }} as list
           build-args: |
-            ${{ fromJson(env.BUILD_ARGS) }}
+            ${{ fromJson('["base_image=0-8.0-bullseye","extensions=mysqli pdo pdo_mysql"]') }}
           # Use GitHub Actions cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
