--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -36,11 +36,10 @@ jobs:
 
       - name: 'Load configurations'
         id: configurations
-        working-directory: ${{ github.workspace }}/scripts
         run: |
           echo "PWD"
           echo pwd
-          echo "configurations=$(deno run --allow-read --allow-env ./configuration.ts)" >> $GITHUB_OUTPUT
+          echo "configurations=$(deno run --allow-read --allow-env ./scripts/configuration.ts)" >> $GITHUB_OUTPUT
 
     outputs:
       configurations: ${{ steps.configurations.outputs.configurations }}
@@ -70,8 +69,7 @@ jobs:
           deno-version: v1.x
 
       - name: 'Generate Dockerfile'
-        working-directory: ${{ github.workspace }}/scripts
-        run: deno run --allow-read --allow-write --allow-env ./generate.ts ${{ matrix.configuration }}
+        run: deno run --allow-read --allow-write --allow-env ./scripts/generate.ts ${{ matrix.configuration }}
 
       - name: 'Upload Dockerfile'
         uses: actions/upload-artifact@v3
