--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -76,7 +76,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Dockerfile.${{ matrix.configuration }}
-          path: ${{ env.WORKDIR }}/Dockerfile.${{ matrix.configuration }}
+          path: Dockerfile.${{ matrix.configuration }}
           if-no-files-found: error
 
       - name: 'Set up Docker QEMU'
@@ -104,8 +104,7 @@ jobs:
         uses: docker/build-push-action@v4.0.0
         with:
           platforms: linux/arm64,linux/amd64
-          context: ${{ env.WORKDIR }}
-          file: ${{ env.WORKDIR }}/Dockerfile.${{ matrix.configuration }}
+          file: Dockerfile.${{ matrix.configuration }}
           push: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
           tags: ghcr.io/${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
