--- a/laravel/templates/Dockerfile
+++ b/laravel/templates/Dockerfile
@@ -16,5 +16,5 @@ ARG NODE_VERSION="lts/*"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
 # Preinstall Code Server for user 'vscode' to speed up first run
-COPY ../scripts/install-vs-code-server.sh /tmp/install-vs-code-server.sh
+COPY scripts/install-vs-code-server.sh /tmp/install-vs-code-server.sh
 RUN su vscode -c "/tmp/install-vs-code-server.sh"
