Added build triggers for docker builder changes

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -6,14 +6,16 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - 'laravel/**'
       - 'scripts/**'
+      - '.github/workflows/docker-builder.yml'
+      - 'laravel/**'
       - '.github/workflows/laravel.yml'
   push:
     branches: [ main ]
     paths:
-      - 'laravel/**'
       - 'scripts/**'
+      - '.github/workflows/docker-builder.yml'
+      - 'laravel/**'
       - '.github/workflows/laravel.yml'
 
 jobs:
