--- a/.github/workflows/docker-builder.yml
+++ b/.github/workflows/docker-builder.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: 'Load configurations'
         env:
-          WORKDIR: ${{ github.event.inputs.WORKDIR }}
+          WORKDIR: ${{ inputs.WORKDIR }}
         id: configurations
         run: >
           echo "configurations=$(
@@ -66,7 +66,7 @@ jobs:
 
       - name: 'Generate Dockerfile'
         env:
-          WORKDIR: ${{ github.event.inputs.WORKDIR }}
+          WORKDIR: ${{ inputs.WORKDIR }}
         run: > 
           deno run
           --allow-read
