Set user back to vscode

--- a/deno/templates/Dockerfile
+++ b/deno/templates/Dockerfile
@@ -5,8 +5,6 @@ ARG deno_version=
 COPY deno/scripts/deno-install.sh /tmp/deno-install.sh
 RUN /tmp/deno-install.sh ${deno_version}
 
-# Preinstall Code Server for user 'node' to speed up first run
-# We use 'node' instead of 'vscode' because the base image uses 'node' as the default user
-# https://github.com/devcontainers/images/blob/main/src/javascript-node/.devcontainer/Dockerfile#L10
+# Preinstall Code Server for user 'vscode' to speed up first run
 COPY scripts/install-vs-code-server.sh /tmp/install-vs-code-server.sh
-RUN su node -c "/tmp/install-vs-code-server.sh"
+RUN su vscode -c "/tmp/install-vs-code-server.sh"
