--- a/deno/templates/Dockerfile
+++ b/deno/templates/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/devcontainers/base:jammy
 
-ARG deno_version=
+ARG deno_version
 # Install Deno with support for ARM64
 COPY deno/scripts/deno-install.sh /tmp/deno-install.sh
 RUN /tmp/deno-install.sh ${deno_version}
