--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,4 +23,4 @@ jobs:
       uses: ./.github/workflows/docker-builder.yml
       with:
         WORKDIR: laravel
-        IMAGE_NAME: devcontainer-laravel
+        IMAGE_NAME: devcontainers/laravel
