--- a/laravel/templates/Dockerfile
+++ b/laravel/templates/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
 # Install specified extensions
-RUN docker-php-ext-install ${extensions}
+RUN docker-php-ext-install ${extensions} \
+    docker-php-ext-enable ${extensions}
 
 # [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
 ARG NODE_VERSION="lts/*"
