--- a/laravel/templates/Dockerfile
+++ b/laravel/templates/Dockerfile
@@ -7,6 +7,8 @@ ARG extensions
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     # MariaDB Client
     && apt-get install -y mariadb-client \
+    # Install xml libraries
+    libxml2-dev \
     # Cypress dependencies
     libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb \
     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
